syntax = "proto3";

package quality;

option go_package = "github.com/jh125486/CSCE5350_gradebot/pkg/proto";

service QualityService {
  rpc EvaluateCodeQuality(EvaluateCodeQualityRequest) returns (EvaluateCodeQualityResponse);
}

message EvaluateCodeQualityRequest {
  string instructions = 1;
  repeated File files = 2;
}

message EvaluateCodeQualityResponse {
  // The quality score, from 0-100.
  int32 quality_score = 1;
  string feedback = 2;
}

message File {
  string name = 1;
  string content = 2;
}